--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 CREDENTIALS
 
-This project uses the https://openweathermap.org/ API to get weather data. The key is held in the file "js/config.js" under a variable names apikeys.openWeather. In order to use this project this file and data will need to be created locally as the file is ignored by git for security.
+This project uses the https://openweathermap.org/ API to get weather data. The key is held in the file "js/config.js" under a variable named "apikeys.openWeather". In order to use this project this file and data will need to be created locally as the file is ignored by git for security.
