--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 CREDENTIALS
 
-This project uses the https://openweathermap.org/ API to get weather data. The key is held in the file "js/config.js" under a variable names apikeys.openWeather. In order to use this project this file and data will need to be created locally as the file is ignored by git for security.
+This project uses the https://openweathermap.org/ API to get weather data. To begin using this project you must first copy the file "js/configTemp.js" into the same directory and rename it to "config.js". Then fill in the value of "openWeather" with your own API key. The newly created file "js/config.js" is ignored by git for security.
